<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/lay_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_card1"

            android:layout_width="180dp"
            android:layout_height="255dp"
            android:layout_weight="1"

            android:scaleType="centerInside"
            android:src="@drawable/img_15"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/iv_card2"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:contentDescription="@string/todo2"
            android:scaleType="centerInside"
            android:src="@drawable/img_15" />


    </LinearLayout>

    <Button
        android:id="@+id/b_deal"
        android:layout_width="133dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"


        android:layout_alignParentBottom="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="366dp"
        android:text="@string/deal"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_war"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"


        android:layout_marginStart="110dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="183dp"
        android:text="@string/war"
        android:textSize="72sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_player1"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="18dp"

        android:layout_marginTop="625dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="26dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/player_1_0"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_player2"
        android:layout_width="205dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="186dp"
        android:layout_marginTop="618dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="17dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/player_2_0"
        android:textSize="30sp"
        android:textStyle="italic" />
</RelativeLayout>